# ClawWithTail

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sprint2_result.txt  temp.txt  verify_sprint2.py
adapters/camera/: __init__.py  avfoundation.py  base.py  directshow.py  mock.py  v4l2.py
adapters/sensor/: __init__.py  base.py  bluetooth.py  serial_adapter.py  wifi_poll.py
cli/: device.py  log.py  main.py  task.py
config/: config.yaml  devices.yaml
core/: storage_init.py
core/agent/: context_budget.py  llm_engine.py  react_loop.py  self_planner.py  tool_registry.py
core/bus/: __init__.py  bus.py  poll_manager.py  webhook_server.py
core/config/: __init__.py  loader.py  models.py
core/models/: __init__.py  agent.py  bus.py  env_profile.py  task.py
core/scheduler/: __init__.py  event_bus.py  scheduler.py
core/task_runner/: context_builder.py  loader.py  runner.py  schema.json  state.py  validator.py
docs/: General_analysis.md  contributing.md  plan-01.md  spec.md  work_sprint.md
docs/tasks-plan01/: tasks-01.md  tasks-02.md  tasks-03.md  tasks-04.md  tasks-05.md
docs/testing/: hardware_test_checklist.md  test_report_template.md
tasks/examples/: chemistry_monitor.json  daily_note.json  drinking_summarizer.json  drinking_watcher.json  plant_monitor.json
tests/integration/: test_bus_pipeline.py  test_camera_capture.py  test_demo_chemistry.py  test_demo_drinking.py  test_demo_plant.py  test_poll_manager.py  test_storage_tools.py  test_system_startup.py  test_vision_tools.py
tests/unit/: test_bus.py  test_camera_adapters.py  (+19 more)
(+12 files in other folders)
